--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,20 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --main-font: Inter, sans-serif;
+    --accent-font: PressStart2P;
+    --main-font-weight: 400;
+    --large-font-weight: 700;
+    --font-shadow: rgba(255, 255, 255, 0.6);
+
+    --page-bg-color: #fff;
+    --accent-color: #000;
+    --bg-lines-color: #d3d3d3;
+    --bg-color: #e7e7e7 0%;
+    --bg-accent-color:#1a1a1a;
+    --bg-image: repeating-linear-gradient( to right, var(--bg-lines-color) 0 1px, transparent 2px 3px),
+                repeating-linear-gradient( to bottom, var(--bg-lines-color) 0 1px, transparent 2px 3px),
+                linear-gradient( to bottom, var(--bg-color), var(--bg-accent-color));
+
+    --icon-body-color: none;
+    --icon-accent-color: #f00;
+}
