--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,100 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon .core {
+  opacity: 0;
+  fill: var(--accent-color);
+  transition: opacity 0.3s linear 0.03s, fill 0.3s linear 0.03s;
+}
+
+.like-icon .main-body {
+  opacity: 0;
+  fill: var(--accent-color);
+  transition: opacity 0.3s linear, fill 0.3s linear;
+}
+
+.like-icon.is-liked .core {
+  opacity: 1;
+  fill: var(--icon-accent-color);
+  transition: opacity 0.3s linear, fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  opacity: 1;
+  fill: var(--icon-accent-color);
+  transition: opacity 0.3s linear, fill 0.3s linear 0.03s;
+}
+
+.like-icon.is-liked .contour {
+  opacity: 1;
+  fill: var(--icon-accent-color);
+  transition: opacity 0.3s linear, fill 0.3s linear 0.06s;
+}
+
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: icon-scale 0.3s ease-in 0.1s alternate;
+}
+
+.like-icon.is-liked .sparks {
+  animation: icon-sparks 0.3s linear 0.3s;
+}
+
+.like-icon:hover .core {
+  opacity: 1;
+  transition: opacity 0.3s linear, fill 0.3s linear 0.03s;
+}
+
+.like-icon:hover .main-body {
+  opacity: 1;
+  transition: opacity 0.3s linear 0.05s, fill 0.3s linear;
+}
+
+.like-icon:active .core {
+  fill: var(--icon-accent-color);
+  transition: opacity 0.3s linear, fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--icon-accent-color);
+  transition: opacity 0.3s linear 0.05s, fill 0.3s linear 0.05s;
+}
+
+@keyframes arrow-move {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(4px);
+  }
+}
+
+@keyframes icon-scale {
+  0% {
+    scale: 1;
+  }
+
+  100% {
+    scale: 1.5;
+  }
+}
+
+@keyframes icon-sparks {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
