--- a/styles/animations.css
+++ b/styles/animations.css
@@ -17,34 +17,40 @@
   opacity: 0;
 }
 
+.like-icon .contour {
+  opacity: 1;
+  fill: var(--accent-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
 .like-icon .core {
   opacity: 0;
   fill: var(--accent-color);
-  transition: opacity 0.3s linear 0.03s, fill 0.3s linear 0.03s;
+  transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon .main-body {
   opacity: 0;
   fill: var(--accent-color);
-  transition: opacity 0.3s linear, fill 0.3s linear;
+  transition: fill 0.3s linear;
 }
 
 .like-icon.is-liked .core {
   opacity: 1;
   fill: var(--icon-accent-color);
-  transition: opacity 0.3s linear, fill 0.3s linear;
+  transition: fill 0.3s linear;
 }
 
 .like-icon.is-liked .main-body {
   opacity: 1;
   fill: var(--icon-accent-color);
-  transition: opacity 0.3s linear, fill 0.3s linear 0.03s;
+  transition: fill 0.3s linear 0.3s;
 }
 
 .like-icon.is-liked .contour {
   opacity: 1;
   fill: var(--icon-accent-color);
-  transition: opacity 0.3s linear, fill 0.3s linear 0.06s;
+  transition: opacity 0.3s linear, fill 0.3s linear;
 }
 
 .like-icon.is-liked .heart {
@@ -58,22 +64,22 @@
 
 .like-icon:hover .core {
   opacity: 1;
-  transition: opacity 0.3s linear, fill 0.3s linear 0.03s;
+  transition: fill 0.3s linear;
 }
 
 .like-icon:hover .main-body {
   opacity: 1;
-  transition: opacity 0.3s linear 0.05s, fill 0.3s linear;
+  transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon:active .core {
   fill: var(--icon-accent-color);
-  transition: opacity 0.3s linear, fill 0.3s linear;
+  transition: fill 0.3s linear;
 }
 
 .like-icon:active .main-body {
   fill: var(--icon-accent-color);
-  transition: opacity 0.3s linear 0.05s, fill 0.3s linear 0.05s;
+  transition: fill 0.3s linear 0.05s;
 }
 
 @keyframes arrow-move {
