--- a/styles/animations.css
+++ b/styles/animations.css
@@ -20,7 +20,6 @@
 .like-icon .contour {
   opacity: 1;
   fill: var(--accent-color);
-  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon .core {
@@ -44,13 +43,13 @@
 .like-icon.is-liked .main-body {
   opacity: 1;
   fill: var(--icon-accent-color);
-  transition: fill 0.3s linear 0.3s;
+  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon.is-liked .contour {
   opacity: 1;
   fill: var(--icon-accent-color);
-  transition: opacity 0.3s linear, fill 0.3s linear;
+  transition: opacity 0.3s linear 0.06s, fill 0.3s linear 0.06s;
 }
 
 .like-icon.is-liked .heart {
@@ -69,7 +68,7 @@
 
 .like-icon:hover .main-body {
   opacity: 1;
-  transition: fill 0.3s linear 0.03s;
+  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon:active .core {
