--- a/styles/animations.css
+++ b/styles/animations.css
@@ -20,18 +20,27 @@
 .like-icon .contour {
   opacity: 1;
   fill: var(--accent-color);
+  transition: fill 0.1s linear;
 }
 
 .like-icon .core {
-  opacity: 0;
-  fill: var(--accent-color);
+  fill: transparent;
   transition: fill 0.3s linear 0.03s;
 }
 
-.like-icon .main-body {
-  opacity: 0;
+.like-icon:hover .core {
   fill: var(--accent-color);
   transition: fill 0.3s linear;
+}
+
+.like-icon .main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--accent-color);
+  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon.is-liked .core {
@@ -59,16 +68,6 @@
 
 .like-icon.is-liked .sparks {
   animation: icon-sparks 0.3s linear 0.3s;
-}
-
-.like-icon:hover .core {
-  opacity: 1;
-  transition: fill 0.3s linear;
-}
-
-.like-icon:hover .main-body {
-  opacity: 1;
-  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon:active .core {
